--- a/static/index.html
+++ b/static/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Node on Azure</title>
-</head>
-<body>
-<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-<p>This repository serves as a template that can be used to create a Node.js and Express based website that can easily
-be hosted on Microsoft Azure.</p>
+<html lang="en">
+    <!--
+       Author: Nathan Lange
+       Class:  Software Engineering
+       Description: Web Dice Roller
+    -->
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+    <title>Web Dice Roller</title>
 
-Additional application functionality includes:<br />
-<a href="fetching-from-server.html">Accessing Node.js Server-Side Application Programming Interfaces (APIs)</a><br />
-<a href="fetching-remote-dog-breeds.html">Accessing Remote Application Programming Interfaces (APIs)</a>
-</body>
+    <body onload="rollUnsavedDice()">
+        <table>
+            <tr>
+                <td>
+                    <h1>Welcome to Dice Roller!</h1>
+                    <h2><i>Instructions:</i></h2>
+                    <pre>
+Roll the dice to defeat the dark army. To fight roll the dice.
+Players are then allowed 2 rerolls on their turn. First, they 
+select the dice they wish to save and not reroll by clicking
+the <b>save</b> button, which will switch to <b>unsave</b> so the player
+may unsave that die's roll if they so choose to. Second, they 
+select <b>roll</b> to reroll all dice that were not saved. To win, players 
+must reduce the dragon's health to 0. When it is the start of a 
+player's turn they are to toggle all save buttons to off and roll.
+                    </pre>
+                    <h2><i>Dice Roll Meanings:</i></h2>
+                    <pre>
+Pair (two dice of the same number) deals 2 stab damage.
+Full House (two dice of the same number and three of another)
+deals 4 push damage and prevents the player from receiving 
+stab damage until their next turn. 
+Straight (five dice that range from 1 to 5 or 2 to 6) deals 6
+magic damage.
+Five-of-a-Kind (five dice of the same number) deals 10 stab
+damage. 
+                    </pre>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td><img id="dieOne" src="images/6.png" alt="roll"></td>
+                            <td><img id="dieTwo" src="images/6.png" alt="roll"></td>
+                            <td><img id="dieThree" src="images/6.png" alt="roll"></td>
+                            <td><img id="dieFour" src="images/6.png" alt="roll"></td>
+                            <td><img id="dieFive" src="images/6.png" alt="roll"></td>
+                        </tr>
+                        <tr>
+                            <td><button id="saveOne"   type="button" onclick="toggleOne()">save</button></td>
+                            <td><button id="saveTwo"   type="button" onclick="toggleTwo()">save</button></td>
+                            <td><button id="saveThree" type="button" onclick="toggleThree()">save</button></td>
+                            <td><button id="saveFour"  type="button" onclick="toggleFour()">save</button></td>
+                            <td><button id="saveFive"  type="button" onclick="toggleFive()">save</button></td>
+                        </tr>
+                        <tr>
+                            <td>= <p id="val1" class="rightJustifiedNums">1</p></td>
+                            <td>= <p id="val2" class="rightJustifiedNums">1</p></td>
+                            <td>= <p id="val3" class="rightJustifiedNums">1</p></td>
+                            <td>= <p id="val4" class="rightJustifiedNums">1</p></td>
+                            <td>= <p id="val5" class="rightJustifiedNums">1</p></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+        <button id="rollButton" type="button" onclick="rollUnsavedDice()" autofocus>roll</button>
+    </body>
 </html>
